- Tighetend up vertical spacing on homepage by removing the padding underneath all text headlines and exhibition images. - On Post Archives, such as exhibitions, events, or press releases, if there is not a Past & Current of that post type type there will be no Current vs Past headline text shown. - Removed the press releases navigation link. - If viewer wants to see the featured image within a gallery allow them to click it and open the image in a new window full size. - Added Facebook and Instagram icons on top of all pages. - Fixed arrow thickness on secondary gallery controls.

--- a/style.sass
+++ b/style.sass
@@ -57,6 +57,12 @@ $topbar-menu-icon-color: $black
 header
 	background: $white
 
+.header-social
+	a
+		color: #000
+		font-size: 1.2em
+		padding: 0 0.5em
+
 // Buttons
 $button-font-family: $cvcHeaderFont
 
@@ -198,6 +204,9 @@ footer
 
 .home
 
+	.wpb_text_column, .wpb_separator.wpb_content_element
+		margin-bottom: 1em
+
 	.homepage-top-5 img
 		width: 100px
 		height: auto
@@ -249,10 +258,11 @@ footer
 			max-width: 92%
 			display: block
 			margin: 0 auto
+			cursor: pointer
 
 		.fa
 			position: absolute
-			font-size: 4em
+			font-size: 2.5em
 			color: #BBB
 			z-index: 10000
 			top: 0
